2015-01-09  Graeme Watt  <graeme.watt@durham.ac.uk>

	* Remove abs(...) twice in function PDFSet::randomValueFromHessian
	to correct a mistake in Eq. (6.5) of arXiv:1205.4024v2.  The
	correction is necessary to ensure that correlations are preserved
	when converting a Hessian PDF set to a Monte Carlo PDF set.

2014-12-23  Andy Buckley  <andy.buckley@cern.ch>

	* 6.1.5 release.

2014-12-22  Andy Buckley  <andy.buckley@cern.ch>

	* Better error handling in PDF index lookup, including clearer
	reporting of set-unmatched PDF IDs and member numbers which are
	out of range for a valid set.

	* Restoring original active set member in LHAGlue metadata get*
	functions which were previously switching focus as a result of
	calling loadMember() to get numerical grid data.

	* Making LHAGlue Fortran interface switch the current set slot
	more coherently (has_photon is the exception).

	* Attempt to use Threshold* metadata keys for Fortran
	getthresholdm_ and old C++ wrapper getThreshold. Not yet fully
	supported in the rest of the system but we may as well pre-empt it
	while editing LHAGlue.cc.

	* Add missing getdescm_ and getdesc_ Fortran functions.

	* Add missing Fortran getdatapath function, cf. LHAPDF5 but with
	colon separators between multiple paths if appropriate.

	* Add Fortran lhapdf_getpdfsetlist function, returning the list of
	available PDF sets as a space-separated string. Note the lhapdf_
	prefix -- this is the intended 'namespace' form for a new Fortran
	interface at some point.

2014-12-18  Andy Buckley  <andy.buckley@cern.ch>

	* Remove obsolete config flags from lhapdf.conf

	* examples/compatibility.cc: Simplify compatibility macro checking.

2014-10-29  Andy Buckley  <andy.buckley@cern.ch>

	* Add parsing and use of the internal PID data line in GridPDF.cc,
	in preference to the PDF::flavors() method. This fixes a bug,
	since flavors() was sorting the list, meaning that data files
	without monotonically sorted PID columns would wrongly assign PDFs