@@ -1,3 +1,13 @@
+2015-03-20  Andy Buckley  <andy.buckley@cern.ch>
+
+	* src/Factories.cc: Adding a set of expandPDFsStr(), decodePDFStr
+	and decodePDFsStr functions to be used for handling more general
+	PDF strings of the sort that will be used in the CompositePDF
+	factory system.
+
+	* Adding a default constructor and knotarrays() accessor to
+	GridPDF, as requested by Nathan Hartland.
+
 2015-01-09  Graeme Watt  <graeme.watt@durham.ac.uk>
 
 	* Remove abs(...) twice in function PDFSet::randomValueFromHessian
